# sweldosyncfast

./: .gitignore
sweldo-sync/: PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  timesheets_sample.csv  vite.config.ts
sweldo-sync/backend/: requirements.txt
sweldo-sync/backend/app/: auth.py  main.py  models.py
sweldo-sync/backend/app/core/: calculator.py
sweldo-sync/backend/app/routers/: employees.py  payroll.py
sweldo-sync/backend/tests/: conftest.py  test_api_flow.py
sweldo-sync/src/: App.tsx  index.css  types.ts
sweldo-sync/src-tauri/: Cargo.toml  tauri.conf.json
sweldo-sync/src-tauri/src/: calculator.rs  main.rs  types.rs
